some content centering and positioning

--- a/google-homepage.html
+++ b/google-homepage.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 
 <html>
-	<div class="div">
 		<head>
 			<title>Google</title>
 			<link rel="stylesheet" type="text/css" href="google-homepage.css">
@@ -15,12 +14,12 @@
 				<input type="button" name="Sign In" value="Sign In">
 			</div>
 			<div class="logo">
-				<img class="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google logo">
+				<img class="image" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google logo">
 			</div>
 			<div class="search">
-				<input type="text" name="search"><br>
-				<input type="button" name="Google Search" value="Google Search">
-				<input type="button" name="I'm Feeling Luchy" value="I'm Feeling Lucky">
+				<input class="searchbar" type="text" name="searchbar"><br>
+					<input class="googlesearch" type="button" name="Google Search" value="Google Search">
+					<input class="lucky" type="button" name="I'm Feeling Lucky" value="I'm Feeling Lucky">
 			</div>
 			<div class="footer">
 				<a href="#">Advertising</a>
@@ -31,5 +30,4 @@
 				<a href="#">Settings</a>
 			</div>
 		</body>
-	</div>
 </html>
