blue signin, grey footer, centered logo, searchbar, and buttons, just need to fix navbar

--- a/google-homepage.html
+++ b/google-homepage.html
@@ -8,26 +8,28 @@
 		  
 		<body>
 			<div class="navigation">
-				<input type="button" name="Gmail" value="Gmail">
-				<input type="button" name="Images" value="Images">
-				<input type="button" name="Google Apps" value=" ">
-				<input type="button" name="Sign In" value="Sign In">
+				<input class="gmail" type="button" name="Gmail" value="Gmail">
+				<input class="images" type="button" name="Images" value="Images">
+				<input class="googleapps" type="button" name="Google Apps" value=" ">
+				<input class="signin" type="button" name="Sign In" value="Sign In">
 			</div>
-			<div class="logo">
-				<img class="image" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google logo">
+			<div class="image">
+				<img class="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google logo">
 			</div>
-			<div class="search">
-				<input class="searchbar" type="text" name="searchbar"><br>
+			<div class="searchbarbox">
+				<input class="searchbar" type="text" name="searchbar">
+			</div>
+			<div class="searchbuttons">
 					<input class="googlesearch" type="button" name="Google Search" value="Google Search">
-					<input class="lucky" type="button" name="I'm Feeling Lucky" value="I'm Feeling Lucky">
+					<input class="imfeelinglucky" type="button" name="I'm Feeling Lucky" value="I'm Feeling Lucky">
 			</div>
 			<div class="footer">
-				<a href="#">Advertising</a>
-				<a href="#">Business</a>
-				<a href="#">About</a>
-				<a href="#">Privacy</a>
-				<a href="#">Terms</a>
-				<a href="#">Settings</a>
+				<a class="advertising" href="#">Advertising</a>
+				<a class="business" href="#">Business</a>
+				<a class="about" href="#">About</a>
+				<a class="privacy" href="#">Privacy</a>
+				<a class="terms" href="#">Terms</a>
+				<a class="settings" href="#">Settings</a>
 			</div>
 		</body>
 </html>
