All done except googleapps button image

--- a/google-homepage.html
+++ b/google-homepage.html
@@ -8,10 +8,14 @@
 		  
 		<body>
 			<div class="navigation">
-				<input class="gmail" type="button" name="Gmail" value="Gmail">
-				<input class="images" type="button" name="Images" value="Images">
-				<input class="googleapps" type="button" name="Google Apps" value=" ">
-				<input class="signin" type="button" name="Sign In" value="Sign In">
+				<div class="navbuttons">
+					<ul>
+						<li><a href="#">Gmail</a></li>
+						<li><a href="#">Images</a></li>
+						<li><a class="googleapps" href="#"></a></li>
+						<li><a class="signin" href="#">Sign In</a></li>
+					</ul>
+				</div>
 			</div>
 			<div class="image">
 				<img class="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google logo">
@@ -24,12 +28,16 @@
 					<input class="imfeelinglucky" type="button" name="I'm Feeling Lucky" value="I'm Feeling Lucky">
 			</div>
 			<div class="footer">
-				<a class="advertising" href="#">Advertising</a>
-				<a class="business" href="#">Business</a>
-				<a class="about" href="#">About</a>
-				<a class="privacy" href="#">Privacy</a>
-				<a class="terms" href="#">Terms</a>
-				<a class="settings" href="#">Settings</a>
+				<div class="footerbuttons">
+					<ul>
+						<li class="l"><a href="#">Advertising</a></li>
+						<li class="l"><a href="#">Business</a></li>
+						<li class="l"><a href="#">About</a></li>
+						<li class="r"><a href="#">Settings</a></li>
+						<li class="r"><a href="#">Terms</a></li>
+						<li class="r"><a href="#">Privacy</a></li>
+					</ul>
+				</div>
 			</div>
 		</body>
 </html>
